--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,3 +1,3 @@
-tfc_organization = "my-tfc-organization"
+tfc_organization = "amarthineni"
 tfc_team = "aws-service-catalog"
-token_rotation_interval_in_days = 30
+token_rotation_interval_in_days = 60
